[gd_scene load_steps=7 format=3 uid="uid://clqupjhglq5tp"]

[ext_resource type="Script" path="res://scenes/ui/game_over/game_over.gd" id="1_g2a4q"]
[ext_resource type="Texture2D" uid="uid://cueh1i640ik5r" path="res://resources/images/room_stage/sprite_return_button.png" id="3_15tng"]
[ext_resource type="AudioStream" uid="uid://weo6ylx5t0x5" path="res://resources/audio/sfx/general_purpose/sfx_button_click_heavy.wav" id="4_wreh3"]
[ext_resource type="AudioStream" uid="uid://bexei7qh5wag" path="res://resources/audio/sfx/general_purpose/sfx_button_click.wav" id="5_dclo6"]
[ext_resource type="AudioStream" uid="uid://cqy3kf0oxav8t" path="res://resources/audio/sfx/general_purpose/sfx_common_indicate.wav" id="6_gc8g0"]
[ext_resource type="AudioStream" uid="uid://d307nv3b15tey" path="res://resources/audio/sfx/room_game_over/sfx_high_score_clap.wav" id="7_mwkk4"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g2a4q")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverText" type="Label" parent="Control"]
layout_mode = 0
offset_left = -517.0
offset_top = -592.0
offset_right = 559.0
offset_bottom = -57.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -80
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_font_sizes/font_size = 250
text = "GAME
OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClearedStageText" type="Label" parent="Control"]
layout_mode = 0
offset_left = -397.0
offset_top = 9.0
offset_right = 449.0
offset_bottom = 179.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -80
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_font_sizes/font_size = 80
text = "Stages cleared:"
vertical_alignment = 1

[node name="Score" type="Label" parent="Control"]
layout_mode = 0
offset_left = -397.0
offset_top = 9.0
offset_right = 449.0
offset_bottom = 171.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -80
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_font_sizes/font_size = 100
text = "99"
horizontal_alignment = 2
vertical_alignment = 1

[node name="NewBestText" type="Label" parent="Control"]
layout_mode = 0
offset_left = -397.0
offset_top = 57.0
offset_right = 449.0
offset_bottom = 227.0
theme_override_colors/font_color = Color(1, 0.677333, 0.12, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -80
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_font_sizes/font_size = 80
text = "NEW BEST!"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ReturnButton" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = -405.0
offset_top = 420.0
offset_right = 595.0
offset_bottom = 741.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("3_15tng")

[node name="Label" type="Label" parent="Control/ReturnButton"]
layout_mode = 0
offset_right = 1007.0
offset_bottom = 290.0
theme_override_colors/font_color = Color(0.74, 0.74, 0.74, 1)
theme_override_font_sizes/font_size = 230
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="RetryButton" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 47.9999
offset_top = 420.0
offset_right = 1048.0
offset_bottom = 741.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("3_15tng")

[node name="Label" type="Label" parent="Control/RetryButton"]
layout_mode = 0
offset_right = 1007.0
offset_bottom = 290.0
theme_override_font_sizes/font_size = 230
text = "Retry"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("4_wreh3")
bus = &"SFX"

[node name="ClickSFX" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("5_dclo6")
bus = &"SFX"

[node name="ClearedStageTextSFX" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("6_gc8g0")
max_polyphony = 4
bus = &"SFX"

[node name="HighScoreSFX" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("7_mwkk4")
max_polyphony = 4
bus = &"SFX"

[connection signal="pressed" from="Control/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="Control/RetryButton" to="." method="_on_retry_button_pressed"]
